--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,16 @@ repository = "https://github.com/Xuanwo/serde_header"
 homepage = "https://github.com/Xuanwo/serde_header"
 documentation = "https://docs.rs/serde_header/"
 
+[features]
+crate_http = ["http"]
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.20"
-http = "0.2.1"
+anyhow = "1.0.32"
+
+# used in feature http.
+http = { version = "0.2.1", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
